# plugin-cancellation-testing

./: .gitignore  CMakeLists.txt  CancellationTesting.cmake  README.md  audio-diff.cpp  cmake-format.json  config.cmake
test/: CMakeLists.txt  plugin.cpp
